VQ-1184: UI improvement on AI Chatbot
VQ-1184: UI/UX improvement on chatbot

VQ-1184: UI/UX improvement on Analytics screens

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -414,9 +414,9 @@
         "explore_dashboard": "Explore Dashboard",
         "explore_reports": "Explore Reports",
         "filter": "Filter",
-        "Filters": "Filters",
+        "filters": "Filters",
         "finance": "Finance",
-        "glance_into_dashboards": "A glance into dahsboards",
+        "glance_into_dashboards": "A glance into dashboards",
         "glance_into_reports": "A glance into reports",
         "go_back": "Go Back",
         "id": "ID",
