VQ-1184: Update on multilingual and analytics AI bot

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -49,7 +49,53 @@
     "summary": "摘要",
     "team": "团队",
     "tickets": "票",
-    "view_all": "查看全部"
+    "view_all": "查看全部",
+    "more": "更多",
+    "DAY": "天",
+    "WEEK": "周",
+    "MONTH": "月",
+    "jan": "一月",
+    "feb": "二月",
+    "mar": "三月",
+    "apr": "四月",
+    "may": "五月",
+    "jun": "六月",
+    "jul": "七月",
+    "aug": "八月",
+    "sep": "九月",
+    "oct": "十月",
+    "nov": "十一月",
+    "dec": "十二月",
+    "create_event": "创建事件",
+    "no_event_for_date": "所选日期没有找到事件",
+    "organiser": "组织者",
+    "attendees_participants": "参与者 / 参与者",
+    "title_subject": "标题 / 主题",
+    "location": "地点",
+    "time_from": "起始时间",
+    "time_to": "结束时间",
+    "status": "状态",
+    "description_details": "描述 / 详细信息",
+    "back": "返回",
+    "save": "保存",
+    "profile": "个人资料",
+    "settings": "设置",
+    "logout": "登出",
+    "new_entity": "新实体",
+    "name": "姓名",
+    "id": "ID",
+    "view_entities": "查看实体",
+    "new_quotation": "新报价",
+    "policy_id": "政策ID",
+    "quot_id": "报价ID",
+    "view_quotations": "查看报价",
+    "sun": "周日",
+    "mon": "周一",
+    "tue": "周二",
+    "wed": "周三",
+    "thu": "周四",
+    "fri": "周五",
+    "sat": "周六"
   },
   "crm": {},
   "entities": {
