--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -49,7 +49,53 @@
     "summary": "Zusammenfassung",
     "team": "Team",
     "tickets": "Tickets",
-    "view_all": "ALLE ANZEIGEN"
+    "view_all": "ALLE ANZEIGEN",
+    "more": "mehr",
+    "DAY": "Tag",
+    "WEEK": "Woche",
+    "MONTH": "Monat",
+    "jan": "Jan",
+    "feb": "Feb",
+    "mar": "Mär",
+    "apr": "Apr",
+    "may": "Mai",
+    "jun": "Jun",
+    "jul": "Jul",
+    "aug": "Aug",
+    "sep": "Sep",
+    "oct": "Okt",
+    "nov": "Nov",
+    "dec": "Dez",
+    "create_event": "Veranstaltung erstellen",
+    "no_event_for_date": "Keine Veranstaltung für ausgewähltes Datum gefunden",
+    "organiser": "Organisator",
+    "attendees_participants": "Teilnehmer",
+    "title_subject": "Titel / Thema",
+    "location": "Ort",
+    "time_from": "Startzeit",
+    "time_to": "Endzeit", 
+    "status": "Status",
+    "description_details": "Beschreibung / Details",
+    "back": "Zurück",
+    "save": "Speichern",
+    "profile": "Profil",
+    "settings": "Einstellungen",
+    "logout": "Abmelden",
+    "new_entity": "Neue Entität",
+    "name": "Name",
+    "id": "ID",
+    "view_entities": "Entitäten anzeigen",
+    "new_quotation": "Neues Angebot",
+    "policy_id": "Pol. ID",
+    "quot_id": "Angebot ID",
+    "view_quotations": "Angebote anzeigen",
+    "sun": "So",
+    "mon": "Mo",
+    "tue": "Di",
+    "wed": "Mi",
+    "thu": "Do",
+    "fri": "Fr",
+    "sat": "Sa"
   },
   "crm": {},
   "entities": {
