--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -49,7 +49,53 @@
         "summary" : "Summary",
         "team": "Team",
         "tickets": "Tickets",
-        "view_all": "VIEW ALL"
+        "view_all": "VIEW ALL",
+        "more": "more",
+        "DAY": "day",
+        "WEEK": "week",
+        "MONTH": "month",
+        "jan": "jan",
+        "feb": "feb",
+        "mar": "mar",
+        "apr": "apr",
+        "may": "may",
+        "jun": "jun",
+        "jul": "jul",
+        "aug": "aug",
+        "sep": "sep",
+        "oct": "oct",
+        "nov": "nov",
+        "dec": "dec",
+        "create_event": "Create Event",
+        "no_event_for_date": "No event found for selected date",
+        "organiser": "Organiser",
+        "attendees_participants": "Attendees / Participants",
+        "title_subject": "Title / Subject",
+        "location": "Location",
+        "time_from": "Time from",
+        "time_to": "Time to", 
+        "status": "Status",
+        "description_details": "Description / Details",
+        "back": "Back",
+        "save": "Save",
+        "profile": "Profile",
+        "settings": "Settings",
+        "logout": "Logout",
+        "new_entity":"New Entity",
+        "name": "Name",
+        "id": "ID",
+        "view_entities": "Viewn entities",
+        "new_quotation": "New Quotation",
+        "policy_id": "Pol. ID",
+        "quot_id": "Quot. ID",
+        "view_quotations":"View Quotations",
+        "sun": "Sun",
+        "mon": "Mon",
+        "tue": "Tue",
+        "wed": "Wed",
+        "thu": "Thu",
+        "fri": "Fri",
+        "sat": "Sat"
     },
     "crm": {},
     "entities": {
@@ -427,7 +473,7 @@
         "operations": "Operations",
         "operator": "Operator",
         "other": "Other",
-        "pick_destination": "Pick a destination for your report",
+        "pick_destination": "Choose a destination for your report",
         "pick_square": "Pick a square to add color",
         "quota_premium": "Quota Premium",
         "rename": "Rename",
