--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -49,7 +49,53 @@
     "summary": "Resumen",
     "team": "Equipo",
     "tickets": "Boletos",
-    "view_all": "VER TODO"
+    "view_all": "VER TODO",
+    "more": "más",
+    "DAY": "día",
+    "WEEK": "semana",
+    "MONTH": "mes",
+    "jan": "ene",
+    "feb": "feb",
+    "mar": "mar",
+    "apr": "abr",
+    "may": "may",
+    "jun": "jun",
+    "jul": "jul",
+    "aug": "ago",
+    "sep": "sep",
+    "oct": "oct",
+    "nov": "nov",
+    "dec": "dic",
+    "create_event": "Crear Evento",
+    "no_event_for_date": "No se encontraron eventos para la fecha seleccionada",
+    "organiser": "Organizador",
+    "attendees_participants": "Asistentes / Participantes",
+    "title_subject": "Título / Asunto",
+    "location": "Ubicación",
+    "time_from": "Hora de inicio",
+    "time_to": "Hora de finalización", 
+    "status": "Estado",
+    "description_details": "Descripción / Detalles",
+    "back": "Volver",
+    "save": "Guardar",
+    "profile": "Perfil",
+    "settings": "Configuración",
+    "logout": "Cerrar sesión",
+    "new_entity": "Nueva Entidad",
+    "name": "Nombre",
+    "id": "ID",
+    "view_entities": "Ver Entidades",
+    "new_quotation": "Nueva Cotización",
+    "policy_id": "ID de Póliza",
+    "quot_id": "ID de Cotización",
+    "view_quotations": "Ver Cotizaciones",
+    "sun": "Dom",
+    "mon": "Lun",
+    "tue": "Mar",
+    "wed": "Mié",
+    "thu": "Jue",
+    "fri": "Vie",
+    "sat": "Sáb"
 },
   "crm": {},
   "entities": {
