--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -49,7 +49,53 @@
     "summary": "Résumé",
     "team": "Équipe",
     "tickets": "Billets",
-    "view_all": "VOIR TOUT"
+    "view_all": "VOIR TOUT",
+    "more": "plus",
+    "DAY": "jour",
+    "WEEK": "semaine",
+    "MONTH": "mois",
+    "jan": "janv",
+    "feb": "fév",
+    "mar": "mar",
+    "apr": "avr",
+    "may": "mai",
+    "jun": "juin",
+    "jul": "juil",
+    "aug": "août",
+    "sep": "sep",
+    "oct": "oct",
+    "nov": "nov",
+    "dec": "déc",
+    "create_event": "Créer un événement",
+    "no_event_for_date": "Aucun événement trouvé pour la date sélectionnée",
+    "organiser": "Organisateur",
+    "attendees_participants": "Participants",
+    "title_subject": "Titre / Sujet",
+    "location": "Lieu",
+    "time_from": "De",
+    "time_to": "À", 
+    "status": "Statut",
+    "description_details": "Description / Détails",
+    "back": "Retour",
+    "save": "Enregistrer",
+    "profile": "Profil",
+    "settings": "Paramètres",
+    "logout": "Déconnexion",
+    "new_entity": "Nouvelle Entité",
+    "name": "Nom",
+    "id": "ID",
+    "view_entities": "Voir les Entités",
+    "new_quotation": "Nouveau Devis",
+    "policy_id": "ID de Police",
+    "quot_id": "ID de Devis",
+    "view_quotations": "Voir les Devis",
+    "sun": "Dim",
+    "mon": "Lun",
+    "tue": "Mar",
+    "wed": "Mer",
+    "thu": "Jeu",
+    "fri": "Ven",
+    "sat": "Sam"
   },
   "crm": {},
   "entities": {
