--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -49,7 +49,53 @@
     "summary": "Muhtasari",
     "team": "Timu",
     "tickets": "Tiketi",
-    "view_all": "ONA YOTE"
+    "view_all": "ONA YOTE",
+    "more": "zaidi",
+    "DAY": "siku",
+    "WEEK": "wiki",
+    "MONTH": "mwezi",
+    "jan": "jan",
+    "feb": "feb",
+    "mar": "mar",
+    "apr": "apr",
+    "may": "may",
+    "jun": "jun",
+    "jul": "jul",
+    "aug": "ago",
+    "sep": "sep",
+    "oct": "oct",
+    "nov": "nov",
+    "dec": "dec",
+    "create_event": "Unda Tukio",
+    "no_event_for_date": "Hakuna tukio lililopatikana kwa tarehe iliyochaguliwa",
+    "organiser": "Mwendeshaji",
+    "attendees_participants": "Washiriki",
+    "title_subject": "Jina / Mada",
+    "location": "Mahali",
+    "time_from": "Wakati kutoka",
+    "time_to": "Wakati hadi", 
+    "status": "Hali",
+    "description_details": "Maelezo",
+    "back": "Nyuma",
+    "save": "Hifadhi",
+    "profile": "Profaili",
+    "settings": "Mipangilio",
+    "logout": "Toka",
+    "new_entity": "Entiti Mpya",
+    "name": "Jina",
+    "id": "Kitambulisho",
+    "view_entities": "Tazama Entiti",
+    "new_quotation": "Nukuu Mpya",
+    "policy_id": "Kitambulisho cha Sera",
+    "quot_id": "Kitambulisho cha Nukuu",
+    "view_quotations": "Tazama Nukuu",
+    "sun": "Jua",
+    "mon": "Jumatatu",
+    "tue": "Jumanne",
+    "wed": "Jumatano",
+    "thu": "Alhamisi",
+    "fri": "Ijumaa",
+    "sat": "Jumamosi"
   },
   "crm": {},
   "entities": {
