VQ-1273: Updated i18n for menu links & sidebar

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -46,7 +46,7 @@
     "policy": "政策",
     "quotation": "报价",
     "reinsurance": "再保险",
-    "summary": "摘要",
+    "Summary": "摘要",
     "team": "团队",
     "tickets": "票",
     "view_all": "查看全部",
@@ -95,7 +95,74 @@
     "wed": "周三",
     "thu": "周四",
     "fri": "周五",
-    "sat": "周六"
+    "sat": "周六",
+    "My Tasks": "我的任务",
+    "My Dashboard": "我的仪表板",
+    "My Transactions": "我的交易",
+    "My Policies": "我的政策",
+    "My Quotations": "我的报价",
+    "My Renewals": "我的续签",
+    "Account": "账户",
+    "Entities": "实体",
+    "Staff": "员工",
+    "Clients": "客户",
+    "Agents": "代理商",
+    "Service Providers": "服务提供商",
+    "Actions": "操作",
+    "Quotation": "报价",
+    "Need Analysis": "需求分析",
+    "New Quote": "新报价",
+    "Quotation List": "报价列表",
+    "My Employees": "我的员工",
+    "My Activities": "我的活动",
+    "Business Account": "商业账户",
+    "Organization Setups": "组织设置",
+    "Organization": "组织",
+    "Countries": "国家",
+    "Org Parameters": "组织参数",
+    "Currencies": "货币",
+    "Post Levels": "职位级别",
+    "Division": "部门",
+    "Bank Setups": "银行设置",
+    "Banks": "银行",
+    "Service Desk": "服务台",
+    "Campaign Management": "活动管理",
+    "Portal Setups": "门户设置",
+    "General Parameters": "一般参数",
+    "System Parameters": "系统参数",
+    "System Sequences": "系统序列",
+    "Class": "分类",
+    "Products": "产品",
+    "Cover Types & Sections": "保险类型和部分",
+    "Taxes": "税收",
+    "Client & Insured": "客户和被保险人",
+    "Premium Rates": "保费率",
+    "Perils & Territories": "风险和领土",
+    "Schedules": "时间表",
+    "Clauses": "条款",
+    "Short Period": "短期",
+    "Reinsurance": "再保险",
+    "Analytics": "分析",
+    "Create Report": "创建报告",
+    "Create Dashboard": "创建仪表板",
+    "Dashboards": "仪表板",
+    "My Reports": "我的报告",
+    "Shared Reports": "共享报告",
+    "Account Setup": "账户设置",
+    "Staff Performance": "员工绩效",
+    "CRM Setup": "CRM设置",
+    "GIS Setup": "GIS设置",
+    "Screen Setup": "屏幕设置",
+    "Need Analysis Setup": "需求分析设置",
+    "Create Team": "创建团队",
+    "View Team": "查看团队",
+    "Policies": "政策",
+    "Report Claims": "报告索赔",
+    "View Claims": "查看索赔",
+    "View Account": "查看账户",
+    "Create Account": "创建账户",
+    "Create Quick Quote": "创建快速报价",
+    "View Quotations": "查看报价"
   },
   "crm": {},
   "entities": {
