--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -46,7 +46,7 @@
     "policy": "Richtlinie",
     "quotation": "Angebot",
     "reinsurance": "Rückversicherung",
-    "summary": "Zusammenfassung",
+    "Summary": "Zusammenfassung",
     "team": "Team",
     "tickets": "Tickets",
     "view_all": "ALLE ANZEIGEN",
@@ -95,7 +95,74 @@
     "wed": "Mi",
     "thu": "Do",
     "fri": "Fr",
-    "sat": "Sa"
+    "sat": "Sa",
+      "My Tasks": "Meine Aufgaben",
+    "My Dashboard": "Mein Dashboard",
+    "My Transactions": "Meine Transaktionen",
+    "My Policies": "Meine Richtlinien",
+    "My Quotations": "Meine Angebote",
+    "My Renewals": "Meine Verlängerungen",
+    "Account": "Konto",
+    "Entities": "Entitäten",
+    "Staff": "Personal",
+    "Clients": "Kunden",
+    "Agents": "Agenten",
+    "Service Providers": "Dienstleister",
+    "Actions": "Aktionen",
+    "Quotation": "Angebot",
+    "Need Analysis": "Bedarfsanalyse",
+    "New Quote": "Neues Angebot",
+    "Quotation List": "Angebotsliste",
+    "My Employees": "Meine Mitarbeiter",
+    "My Activities": "Meine Aktivitäten",
+    "Business Account": "Geschäftskonto",
+    "Organization Setups": "Organisationseinstellungen",
+    "Organization": "Organisation",
+    "Countries": "Länder",
+    "Org Parameters": "Org-Parameter",
+    "Currencies": "Währungen",
+    "Post Levels": "Beitragsstufen",
+    "Division": "Abteilung",
+    "Bank Setups": "Bankeneinrichtungen",
+    "Banks": "Banken",
+    "Service Desk": "Service Desk",
+    "Campaign Management": "Kampagnenmanagement",
+    "Portal Setups": "Portal-Einstellungen",
+    "General Parameters": "Allgemeine Parameter",
+    "System Parameters": "Systemparameter",
+    "System Sequences": "Systemsequenzen",
+    "Class": "Klasse",
+    "Products": "Produkte",
+    "Cover Types & Sections": "Deckungsarten und Abschnitte",
+    "Taxes": "Steuern",
+    "Client & Insured": "Kunde & Versicherter",
+    "Premium Rates": "Prämienraten",
+    "Perils & Territories": "Gefahren & Gebiete",
+    "Schedules": "Zeitpläne",
+    "Clauses": "Klauseln",
+    "Short Period": "Kurzzeit",
+    "Reinsurance": "Rückversicherung",
+    "Analytics": "Analytik",
+    "Create Report": "Bericht erstellen",
+    "Create Dashboard": "Dashboard erstellen",
+    "Dashboards": "Dashboards",
+    "My Reports": "Meine Berichte",
+    "Shared Reports": "Geteilte Berichte",
+    "Account Setup": "Konto einrichten",
+    "Staff Performance": "Personalperformance",
+    "CRM Setup": "CRM-Einrichtung",
+    "GIS Setup": "GIS-Einrichtung",
+    "Screen Setup": "Bildschirmeinrichtung",
+    "Need Analysis Setup": "Bedarfsanalyse-Einrichtung",
+    "Create Team": "Team erstellen",
+    "View Team": "Team anzeigen",
+    "Policies": "Richtlinien",
+    "Report Claims": "Schadensberichterstattung",
+    "View Claims": "Schadensansprüche anzeigen",
+    "View Account": "Konto anzeigen",
+    "Create Account": "Konto erstellen",
+    "Create Quick Quote": "Schnelles Angebot erstellen",
+    "View Quotations": "Angebote anzeigen"
   },
   "crm": {},
   "entities": {
