--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -38,7 +38,7 @@
         "analytics": "Analytics",
         "dashboard":"dashboard",
         "home":"home",
-        "my_dashbaord":"my dashboard",
+        "my_dashboard":"my dashboard",
         "my_policies": "My Policies",
         "my_quotations": "My Quotations",
         "new_report": "new_report",
@@ -46,7 +46,7 @@
         "policy": "Policy",
         "quotation": "Quotation",
         "reinsurance": "Tickets",
-        "summary" : "Summary",
+        "Summary" : "Summary",
         "team": "Team",
         "tickets": "Tickets",
         "view_all": "VIEW ALL",
@@ -95,7 +95,74 @@
         "wed": "Wed",
         "thu": "Thu",
         "fri": "Fri",
-        "sat": "Sat"
+        "sat": "Sat",
+        "My Tasks": "My Tasks",
+        "My Dashboard": "My Dashboard",
+        "My Transactions": "My Transactions",
+        "My Policies": "My Policies",
+        "My Quotations": "My Quotations",
+        "My Renewals": "My Renewals",
+        "Account": "Account",
+        "Entities": "Entities",
+        "Staff": "Staff",
+        "Clients": "Clients",
+        "Agents": "Agents",
+        "Service Providers": "Service Providers",
+        "Actions": "Actions",
+        "Quotation": "Quotation",
+        "Need Analysis": "Need Analysis",
+        "New Quote": "New Quote",
+        "Quotation List": "Quotation List",
+        "My Employees": "My Employees",
+        "My Activities": "My Activities",
+        "Business Account": "Business Account",
+        "Organization Setups": "Organization Setups",
+        "Organization": "Organization",
+        "Countries": "Countries",
+        "Org Parameters": "Org Parameters",
+        "Currencies": "Currencies",
+        "Post Levels": "Post Levels",
+        "Division": "Division",
+        "Bank Setups": "Bank Setups",
+        "Banks": "Banks",
+        "Service Desk": "Service Desk",
+        "Campaign Management": "Campaign Management",
+        "Portal Setups": "Portal Setups",
+        "General Parameters": "General Parameters",
+        "System Parameters": "System Parameters",
+        "System Sequences": "System Sequences",
+        "Class": "Class",
+        "Products": "Products",
+        "Cover Types & Sections": "Cover Types & Sections",
+        "Taxes": "Taxes",
+        "Client & Insured": "Client & Insured",
+        "Premium Rates": "Premium Rates",
+        "Perils & Territories": "Perils & Territories",
+        "Schedules": "Schedules",
+        "Clauses": "Clauses",
+        "Short Period": "Short Period",
+        "Reinsurance": "Reinsurance",
+        "Analytics": "Analytics",
+        "Create Report": "Create Report",
+        "Create Dashboard": "Create Dashboard",
+        "Dashboards": "Dashboards",
+        "My Reports": "My Reports",
+        "Shared Reports": "Shared Reports",
+        "Account Setup": "Account Setup",
+        "Staff Performance": "Staff Performance",
+        "CRM Setup": "CRM Setup",
+        "GIS Setup": "GIS Setup",
+        "Screen Setup": "Screen Setup",
+        "Need Analysis Setup": "Need Analysis Setup",
+        "Create Team": "Create Team",
+        "View Team": "View Team",
+        "Policies": "Policies",
+        "Report Claims": "Report Claims",
+        "View Claims": "View Claims",
+        "View Account": "View Account",
+        "Create Account": "Create Account",
+        "Create Quick Quote": "Create Quick Quote",
+        "View Quotations": "View Quotations"
     },
     "crm": {},
     "entities": {
