--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -46,7 +46,7 @@
     "policy": "Póliza",
     "quotation": "Cotización",
     "reinsurance": "Reaseguro",
-    "summary": "Resumen",
+    "Summary": "Resumen",
     "team": "Equipo",
     "tickets": "Boletos",
     "view_all": "VER TODO",
@@ -95,7 +95,74 @@
     "wed": "Mié",
     "thu": "Jue",
     "fri": "Vie",
-    "sat": "Sáb"
+    "sat": "Sáb",
+    "My Tasks": "Mis tareas",
+    "My Dashboard": "Mi tablero",
+    "My Transactions": "Mis transacciones",
+    "My Policies": "Mis pólizas",
+    "My Quotations": "Mis cotizaciones",
+    "My Renewals": "Mis renovaciones",
+    "Account": "Cuenta",
+    "Entities": "Entidades",
+    "Staff": "Personal",
+    "Clients": "Clientes",
+    "Agents": "Agentes",
+    "Service Providers": "Proveedores de servicios",
+    "Actions": "Acciones",
+    "Quotation": "Cotización",
+    "Need Analysis": "Análisis de necesidades",
+    "New Quote": "Nueva cotización",
+    "Quotation List": "Lista de cotizaciones",
+    "My Employees": "Mis empleados",
+    "My Activities": "Mis actividades",
+    "Business Account": "Cuenta comercial",
+    "Organization Setups": "Configuraciones de organización",
+    "Organization": "Organización",
+    "Countries": "Países",
+    "Org Parameters": "Parámetros de la organización",
+    "Currencies": "Monedas",
+    "Post Levels": "Niveles de puesto",
+    "Division": "División",
+    "Bank Setups": "Configuraciones bancarias",
+    "Banks": "Bancos",
+    "Service Desk": "Mesa de servicio",
+    "Campaign Management": "Gestión de campañas",
+    "Portal Setups": "Configuraciones del portal",
+    "General Parameters": "Parámetros generales",
+    "System Parameters": "Parámetros del sistema",
+    "System Sequences": "Secuencias del sistema",
+    "Class": "Clase",
+    "Products": "Productos",
+    "Cover Types & Sections": "Tipos de cobertura y secciones",
+    "Taxes": "Impuestos",
+    "Client & Insured": "Cliente y asegurado",
+    "Premium Rates": "Tasas de prima",
+    "Perils & Territories": "Peligros y territorios",
+    "Schedules": "Horarios",
+    "Clauses": "Cláusulas",
+    "Short Period": "Período corto",
+    "Reinsurance": "Reaseguro",
+    "Analytics": "Análisis",
+    "Create Report": "Crear informe",
+    "Create Dashboard": "Crear tablero",
+    "Dashboards": "Tableros",
+    "My Reports": "Mis informes",
+    "Shared Reports": "Informes compartidos",
+    "Account Setup": "Configuración de cuenta",
+    "Staff Performance": "Rendimiento del personal",
+    "CRM Setup": "Configuración de CRM",
+    "GIS Setup": "Configuración de GIS",
+    "Screen Setup": "Configuración de pantalla",
+    "Need Analysis Setup": "Configuración de análisis de necesidades",
+    "Create Team": "Crear equipo",
+    "View Team": "Ver equipo",
+    "Policies": "Pólizas",
+    "Report Claims": "Informe de reclamaciones",
+    "View Claims": "Ver reclamaciones",
+    "View Account": "Ver cuenta",
+    "Create Account": "Crear cuenta",
+    "Create Quick Quote": "Crear cotización rápida",
+    "View Quotations": "Ver cotizaciones"
 },
   "crm": {},
   "entities": {
