--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -46,7 +46,7 @@
     "policy": "Police",
     "quotation": "Devis",
     "reinsurance": "Réassurance",
-    "summary": "Résumé",
+    "Summary": "Résumé",
     "team": "Équipe",
     "tickets": "Billets",
     "view_all": "VOIR TOUT",
@@ -95,7 +95,74 @@
     "wed": "Mer",
     "thu": "Jeu",
     "fri": "Ven",
-    "sat": "Sam"
+    "sat": "Sam",
+    "My Tasks": "Mes tâches",
+    "My Dashboard": "Mon tableau de bord",
+    "My Transactions": "Mes transactions",
+    "My Policies": "Mes polices",
+    "My Quotations": "Mes devis",
+    "My Renewals": "Mes renouvellements",
+    "Account": "Compte",
+    "Entities": "Entités",
+    "Staff": "Personnel",
+    "Clients": "Clients",
+    "Agents": "Agents",
+    "Service Providers": "Fournisseurs de services",
+    "Actions": "Actions",
+    "Quotation": "Devis",
+    "Need Analysis": "Analyse des besoins",
+    "New Quote": "Nouveau devis",
+    "Quotation List": "Liste des devis",
+    "My Employees": "Mes employés",
+    "My Activities": "Mes activités",
+    "Business Account": "Compte professionnel",
+    "Organization Setups": "Paramètres de l'organisation",
+    "Organization": "Organisation",
+    "Countries": "Pays",
+    "Org Parameters": "Paramètres de l'org",
+    "Currencies": "Devises",
+    "Post Levels": "Niveaux de poste",
+    "Division": "Division",
+    "Bank Setups": "Paramètres bancaires",
+    "Banks": "Banques",
+    "Service Desk": "Service d'assistance",
+    "Campaign Management": "Gestion de campagne",
+    "Portal Setups": "Paramètres du portail",
+    "General Parameters": "Paramètres généraux",
+    "System Parameters": "Paramètres système",
+    "System Sequences": "Séquences système",
+    "Class": "Classe",
+    "Products": "Produits",
+    "Cover Types & Sections": "Types de couverture et sections",
+    "Taxes": "Taxes",
+    "Client & Insured": "Client et assuré",
+    "Premium Rates": "Taux de prime",
+    "Perils & Territories": "Périls et territoires",
+    "Schedules": "Calendriers",
+    "Clauses": "Clauses",
+    "Short Period": "Courte période",
+    "Reinsurance": "Réassurance",
+    "Analytics": "Analytique",
+    "Create Report": "Créer un rapport",
+    "Create Dashboard": "Créer un tableau de bord",
+    "Dashboards": "Tableaux de bord",
+    "My Reports": "Mes rapports",
+    "Shared Reports": "Rapports partagés",
+    "Account Setup": "Configuration du compte",
+    "Staff Performance": "Performance du personnel",
+    "CRM Setup": "Configuration CRM",
+    "GIS Setup": "Configuration GIS",
+    "Screen Setup": "Configuration de l'écran",
+    "Need Analysis Setup": "Configuration de l'analyse des besoins",
+    "Create Team": "Créer une équipe",
+    "View Team": "Voir l'équipe",
+    "Policies": "Polices",
+    "Report Claims": "Rapport de réclamations",
+    "View Claims": "Voir les réclamations",
+    "View Account": "Voir le compte",
+    "Create Account": "Créer un compte",
+    "Create Quick Quote": "Créer un devis rapide",
+    "View Quotations": "Voir les devis"
   },
   "crm": {},
   "entities": {
