--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -95,7 +95,74 @@
     "wed": "Jumatano",
     "thu": "Alhamisi",
     "fri": "Ijumaa",
-    "sat": "Jumamosi"
+    "sat": "Jumamosi",
+    "My Tasks": "Kazi Zangu",
+    "My Dashboard": "Dashibodi Yangu",
+    "My Transactions": "Miamala Yangu",
+    "My Policies": "Sera Zangu",
+    "My Quotations": "Nukuu Zangu",
+    "My Renewals": "Upya Wangu",
+    "Account": "Akaunti",
+    "Entities": "Taasisi",
+    "Staff": "Wafanyakazi",
+    "Clients": "Wateja",
+    "Agents": "Mawakala",
+    "Service Providers": "Watoa Huduma",
+    "Actions": "Vitendo",
+    "Quotation": "Nukuu",
+    "Need Analysis": "Uchambuzi wa Mahitaji",
+    "New Quote": "Nukuu Mpya",
+    "Quotation List": "Orodha ya Nukuu",
+    "My Employees": "Wafanyakazi Wangu",
+    "My Activities": "Shughuli Zangu",
+    "Business Account": "Akaunti ya Biashara",
+    "Organization Setups": "Vipimo vya Shirika",
+    "Organization": "Shirika",
+    "Countries": "Nchi",
+    "Org Parameters": "Parameta za Shirika",
+    "Currencies": "Fedha",
+    "Post Levels": "Viwango vya Posta",
+    "Division": "Mgawanyiko",
+    "Bank Setups": "Vipimo vya Benki",
+    "Banks": "Benki",
+    "Service Desk": "Dawati la Huduma",
+    "Campaign Management": "Usimamizi wa Kampeni",
+    "Portal Setups": "Vipimo vya Lango",
+    "General Parameters": "Parameta za Jumla",
+    "System Parameters": "Parameta za Mfumo",
+    "System Sequences": "Mfuatano wa Mfumo",
+    "Class": "Darasa",
+    "Products": "Bidhaa",
+    "Cover Types & Sections": "Aina na Sehemu za Kifuniko",
+    "Taxes": "Kodi",
+    "Client & Insured": "Mteja na Mlipaji Bima",
+    "Premium Rates": "Viwango vya Malipo",
+    "Perils & Territories": "Hatari na Maeneo",
+    "Schedules": "Ratiba",
+    "Clauses": "Vifungu",
+    "Short Period": "Kipindi Kifupi",
+    "Reinsurance": "Kurejesha Bima",
+    "Analytics": "Takwimu",
+    "Create Report": "Unda Ripoti",
+    "Create Dashboard": "Unda Dashibodi",
+    "Dashboards": "Dashibodi",
+    "My Reports": "Ripoti Zangu",
+    "Shared Reports": "Ripoti Zilizoshirikiwa",
+    "Account Setup": "Usanidi wa Akaunti",
+    "Staff Performance": "Utendaji wa Wafanyakazi",
+    "CRM Setup": "Usanidi wa CRM",
+    "GIS Setup": "Usanidi wa GIS",
+    "Screen Setup": "Usanidi wa Skrini",
+    "Need Analysis Setup": "Usanidi wa Uchambuzi wa Mahitaji",
+    "Create Team": "Unda Timu",
+    "View Team": "Angalia Timu",
+    "Policies": "Sera",
+    "Report Claims": "Ripoti Madai",
+    "View Claims": "Angalia Madai",
+    "View Account": "Angalia Akaunti",
+    "Create Account": "Unda Akaunti",
+    "Create Quick Quote": "Unda Nukuu Haraka",
+    "View Quotations": "Angalia Nukuu"
   },
   "crm": {},
   "entities": {
